[metadata]
name = anlpy2
version = attr: anlpy2.__version__
url = https://github.com/goro.yabu/anlpy
author = Goro Yabu
license = MIT
description = anlpy2: Analysis Framework

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires =

[options.packages.find]
where = src
